Updated the permission endpoint to return UserAuhtorizationDto to include Roles (#27)
