# src/GovUK.Dfe.ExternalApplications.Api.Client/Generated/swagger.json
@@ -386,20 +386,17 @@
         "operationId": "Users_GetMyPermissions",
         "responses": {
           "200": {
-            "description": "A UserPermission object representing the User's Permissions.",
+            "description": "A UserAuthorizationDto object representing the User's Permissions and Roles.",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/UserPermissionDto"
-                  }
+                  "$ref": "#/components/schemas/UserAuthorizationDto"
                 }
               }
             }
           },
           "401": {
-            "description": "Unauthorized – no valid user token"
+            "description": "Unauthorized no valid user token"
           }
         }
       }
@@ -583,6 +580,24 @@
         "properties": {
           "accessToken": {
             "type": "string"
+          }
+        }
+      },
+      "UserAuthorizationDto": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "permissions": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/UserPermissionDto"
+            }
+          },
+          "roles": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
           }
         }
       },
